# E-Commerce-Operations-Assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW.md  README.md  docker-compose.yml
backend/: .coverage  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml
backend/.deepeval/: .deepeval_telemetry.txt
backend/agents/: _domain_builders.py  factory.py  graph.py  mcp_registry.py  nodes.py  routing.py  rules.py  state.py
backend/agents/configs/: aggregator.yml  customer_support.yml  final_response.yml  inventory.yml  marketing.yml  reflector.yml  router.yml  sales.yml
backend/api/: schemas.py
backend/api/routers/: actions.py  health.py  incidents.py  query.py  threads.py
backend/core/: __init__.py  constants.py  enums.py  logging.py  settings.py
backend/db/: __init__.py  engine.py  models.py  pg_store.py  qdrant_store.py  session.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 29b4eaec2f74_inital_tables.py  a3f1c2d4e5b6_add_threads_and_thread_messages.py  b7e2d3f4a1c5_add_tickets_table.py  c1d2e3f4a5b6_add_products_table.py  d2e3f4a5b6c7_add_parameters_to_actions.py  e3f4a5b6c7d8_add_discount_fields_to_products.py  f4a5b6c7d8e9_add_thread_id_to_actions.py
backend/schemas/: __init__.py  actions.py  analysis.py  common.py  outputs.py  query.py
backend/scripts/: seed_data.py
backend/shared/: __init__.py  constants.py  enums.py
backend/tests/: __init__.py  conftest.py  test_api_actions.py  test_api_incidents.py  test_api_query.py  test_contracts.py  test_db_operations.py  test_evals.py  test_graph.py  test_memory.py
frontend/: .dockerignore  Dockerfile  package.json  vitest.config.ts
frontend/__tests__/hooks/: use-chat.test.ts
frontend/__tests__/lib/: api.test.ts
frontend/app/: error.tsx  globals.css  layout.tsx
frontend/app/actions/: page.tsx
frontend/app/incidents/: page.tsx
frontend/components/: action-row.tsx  filter-tabs.tsx  page-header.tsx  theme-toggle.tsx
frontend/components/chat/: chat-interface.tsx  hitl-action-card.tsx  message-bubble.tsx  message-list.tsx  message-skeleton.tsx  query-input.tsx  report-card.tsx  sidebar.tsx
frontend/components/ui/: accordion.tsx  input.tsx  scroll-area.tsx
frontend/hooks/: use-chat.ts  use-threads.ts
frontend/lib/: api.ts  types.ts
mcp_servers/: Dockerfile  conftest.py  db.py  pyproject.toml  server.py  settings.py
mcp_servers/domains/: common.py  db_tables.py  tool_registry.py
mcp_servers/domains/customer_support/: repository.py  schemas.py  tools.py
mcp_servers/domains/inventory/: repository.py  schemas.py  tools.py
mcp_servers/domains/marketing/: repository.py  schemas.py  tools.py
mcp_servers/domains/memory/: schemas.py  tools.py
mcp_servers/domains/sales/: repository.py  schemas.py  tools.py
mcp_servers/tests/: test_actions.py  test_customer_support.py  test_inventory.py  test_marketing.py  test_memory.py  test_sales.py
