[project]
name = "mcp-operations"
version = "0.1.0"
description = "Unified MCP server for all e-commerce operations domain tools"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

# Only expose the `domains` package when installed as a dependency.
[tool.setuptools.packages.find]
include = ["domains*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
